Bug 906909 - Make LinkedList::debugAssertIsSane() compile. r=waldo

--HG--
extra : rebase_source : 60027f53b4a8fa91dd7e42863c271c36395d6851